--- a/index.css
+++ b/index.css
@@ -1,3 +1,36 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   
 }
+
+h1 {
+  text-align: center;
+}
+
+#tic-tac-toe {
+  margin-left: 37%;
+}
+
+button {
+  background-color: #78bec5;
+  border-radius: 25%;
+  border: none;
+}
+
+button:hover {
+  background-color: #ff6699;
+  border-radius: 25%;
+  border: none;
+}
+
+.square {
+  height: 100px;
+  width: 100px;
+  font-size: 50px;
+  margin: 5%;
+}
+
+.square:active, .square.active { background-color: #a13fad; }
