moved functions around to constructor to try anf fix bugs.

--- a/index.css
+++ b/index.css
@@ -31,12 +31,14 @@ button.square {
   background-color: #78bec5;
   border-radius: 25%;
   border: none;
+  cursor: pointer;
 }
 
 button.square:hover {
-  background-color: #ff6699;
+  background-color: rgba(255, 102, 153, 0.8);
   border-radius: 25%;
   border: none;
+  transition: all 0.2s linear;
 }
 
 .square {
@@ -47,13 +49,28 @@ button.square:hover {
 }
 
 .reset {
-      background-color: Transparent;
-    cursor:pointer;
-    overflow: hidden;
-    outline:none;
+  background-color: Transparent;
+  font-weight: bolder;
+  border: 2px solid #78bec5;
+  margin-top: 2%;
+  font-size: 15px;
+  cursor: pointer;
+  border-radius: 15px;
+  height: 5em;
+  width: 20em;
+}
+
+.reset:hover {
+  background-color: rgba(255, 102, 153, 0.8);
+  border-radius: 15px;
+  border: none;
+  transition: all 0.2s linear;
 }
 
 .message {
   text-align: center;
   font-size: 50px;
+  float: left;
+  margin-top: 0;
+  margin-left: 10%;
 }
