--- a/index.css
+++ b/index.css
@@ -3,10 +3,6 @@
   font-family: 'Patrick Hand SC', cursive;
 }
 
-html {
-  
-}
-
 h1 {
   text-align: center;
   font-size: 50px;
@@ -14,17 +10,16 @@ h1 {
 
 .current-turn {
   text-align: center;
-  font-size: 30px;
-  margin-bottom: 10%;
+  font-size: 40px;
 }
 
 .player-turn {
   text-align: center;
-  font-size: 30px;
-  margin-bottom: 10%;
+  font-size: 40px;
 }
 
 #tic-tac-toe {
+  margin-top: 3%;
   margin-left: 37%;
 }
 
@@ -54,7 +49,7 @@ button.square:hover {
   font-weight: bolder;
   border: 2px solid #78bec5;
   margin-top: 2%;
-  font-size: 15px;
+  font-size: 20px;
   cursor: pointer;
   border-radius: 15px;
   height: 4em;
@@ -63,21 +58,21 @@ button.square:hover {
 
 .play-button {
   margin-bottom: 10%;
-  margin-left: 38%;
+  margin-left: 34%;
 }
 
 .reset:hover, .play-button:hover {
   background-color: rgba(255, 102, 153, 0.8);
   border-radius: 15px;
   border: none;
-  transition: all 0.2s linear;
+  transition: all 0.25s linear;
 }
 
 .message-cat {
   text-align: center;
   float: left;
   margin-left: 10%;
-  font-size: 50px;
+  font-size: 55px;
   color: rgba(255, 102, 153, 0.8);
 }
 
@@ -85,19 +80,13 @@ button.square:hover {
   text-align: center;
   float: right;
   margin-right: 10%;
-  font-size: 50px;
-  color: rgba(255, 102, 153, 0.8);
-}
-
-.message-draw {
-  text-align: center;
-  font-size: 30px;
+  font-size: 55px;
   color: rgba(255, 102, 153, 0.8);
 }
 
 .play {
   text-align: center;
-  font-size: 40px;
+  font-size: 50px;
   display: inline-block;
-  margin-left: 28%;
+  margin-left: 25%;
 }
